--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "latihan 1",
   "main": "index.js",
   "scripts": {
-    "start": "electron ."
+    "start": " set ELECTRON_DISABLE_SECURITY_WARNINGS=true && electron ."
   },
   "author": "",
   "license": "ISC",
