--- a/my-app/package.json
+++ b/my-app/package.json
@@ -15,7 +15,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
-    "electron-dev":  "set ELECTRON_START_URL=http://localhost:3000/ && electron ."
+    "electron-dev": "set ELECTRON_START_URL=http://localhost:3000/ && electron ."
+    "dev": "concurrently --k \"npm start\" \"wait-on http://localhost:3000 && npm run electron-dev\""
   },
   "eslintConfig": {
     "extends": "react-app"
